--- a/Front/Front/transacciones.html
+++ b/Front/Front/transacciones.html
@@ -13,6 +13,16 @@
 </head>
 <body>
 
+    <header>
+  <nav style="background-color: #333; padding: 15px;">
+    <a href="index.html" style="color: white; margin-right: 20px; text-decoration: none;">Inicio</a>
+    <a href="Usuarios.html" style="color: white; margin-right: 20px;">Crear Usuario</a>
+    <a href="transaccion.html" style="color: white; margin-right: 20px;">Crear Transacción</a>
+    <a href="transacciones.html" style="color: white; margin-right: 20px;">Historial</a>
+    <a href="wallet.html" style="color: white; margin-right: 20px;">Estado de Cartera</a>
+  </nav>
+</header>
+
   <h2>Historial de Transacciones</h2>
   <button onclick="cargarTransacciones()">Actualizar</button>
   <div id="mensaje"></div>
@@ -32,5 +42,6 @@
   </table>
 
   <script src="transacciones.js"></script>
+
 </body>
 </html>
