--- a/Front/Front/wallet.html
+++ b/Front/Front/wallet.html
@@ -14,6 +14,16 @@
 </head>
 <body>
 
+    <header>
+  <nav style="background-color: #333; padding: 15px;">
+    <a href="index.html" style="color: white; margin-right: 20px; text-decoration: none;">Inicio</a>
+    <a href="Usuarios.html" style="color: white; margin-right: 20px;">Crear Usuario</a>
+    <a href="transaccion.html" style="color: white; margin-right: 20px;">Crear Transacción</a>
+    <a href="transacciones.html" style="color: white; margin-right: 20px;">Historial</a>
+    <a href="wallet.html" style="color: white; margin-right: 20px;">Estado de Cartera</a>
+  </nav>
+</header>
+
   <h2>Consultar Estado de la Cartera</h2>
 
   <select id="usuarioId">
@@ -40,5 +50,6 @@
   </div>
 
   <script src="wallet.js"></script>
+
 </body>
 </html>
