--- a/Front/Front/Transaccion.html
+++ b/Front/Front/Transaccion.html
@@ -10,6 +10,15 @@
   </style>
 </head>
 <body>
+     <header>
+  <nav style="background-color: #333; padding: 15px;">
+    <a href="index.html" style="color: white; margin-right: 20px; text-decoration: none;">Inicio</a>
+    <a href="Usuarios.html" style="color: white; margin-right: 20px;">Crear Usuario</a>
+    <a href="transaccion.html" style="color: white; margin-right: 20px;">Crear Transacción</a>
+    <a href="transacciones.html" style="color: white; margin-right: 20px;">Historial</a>
+    <a href="wallet.html" style="color: white; margin-right: 20px;">Estado de Cartera</a>
+  </nav>
+</header>
 
   <h2>Registrar Transacción</h2>
 
@@ -38,5 +47,7 @@
   <div id="respuesta"></div>
 
   <script src="transaccion.js"></script>
+
+ 
 </body>
 </html>
