--- a/Front/Front/Transaccion.html
+++ b/Front/Front/Transaccion.html
@@ -3,18 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Registrar Transacción</title>
-  <style>
-    body { font-family: Arial, sans-serif; max-width: 600px; margin: auto; padding: 20px; }
-    input, select, button { display: block; width: 100%; margin-bottom: 12px; padding: 10px; }
-    #respuesta { font-weight: bold; margin-top: 20px; }
-  </style>
+ <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
      <header>
   <nav style="background-color: #333; padding: 15px;">
-    <a href="index.html" style="color: white; margin-right: 20px; text-decoration: none;">Inicio</a>
     <a href="Usuarios.html" style="color: white; margin-right: 20px;">Crear Usuario</a>
     <a href="transaccion.html" style="color: white; margin-right: 20px;">Crear Transacción</a>
+    <a href="index.html" style="color: white; margin-right: 20px; text-decoration: none;">Inicio</a>
     <a href="transacciones.html" style="color: white; margin-right: 20px;">Historial</a>
     <a href="wallet.html" style="color: white; margin-right: 20px;">Estado de Cartera</a>
   </nav>
@@ -46,7 +42,7 @@
 
   <div id="respuesta"></div>
 
-  <script src="transaccion.js"></script>
+  <script src="../scripts.js/transaccion.js"></script>
 
  
 </body>
