--- a/Front/Front/transacciones.html
+++ b/Front/Front/transacciones.html
@@ -3,21 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <title>Historial de Transacciones</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; max-width: 1000px; margin: auto; }
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-    th { background-color: #f2f2f2; }
-    #mensaje { font-weight: bold; margin-bottom: 10px; }
-  </style>
+  <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body>
 
     <header>
   <nav style="background-color: #333; padding: 15px;">
-    <a href="index.html" style="color: white; margin-right: 20px; text-decoration: none;">Inicio</a>
     <a href="Usuarios.html" style="color: white; margin-right: 20px;">Crear Usuario</a>
     <a href="transaccion.html" style="color: white; margin-right: 20px;">Crear Transacción</a>
+    <a href="index.html" style="color: white; margin-right: 20px; text-decoration: none;">Inicio</a>
     <a href="transacciones.html" style="color: white; margin-right: 20px;">Historial</a>
     <a href="wallet.html" style="color: white; margin-right: 20px;">Estado de Cartera</a>
   </nav>
@@ -41,7 +35,7 @@
     <tbody id="transaccionesBody"></tbody>
   </table>
 
-  <script src="transacciones.js"></script>
+  <script src="../scripts.js/transacciones.js"></script>
 
 </body>
 </html>
