--- a/Front/Front/Usuarios.html
+++ b/Front/Front/Usuarios.html
@@ -3,18 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <title>Crear Usuario</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; max-width: 500px; margin: auto; }
-    input, button { display: block; width: 100%; margin-bottom: 10px; padding: 8px; }
-    #respuesta { margin-top: 20px; font-weight: bold; }
-  </style>
+ <link rel="stylesheet" href="../css/styles.css" />
 </head>
 <body>
    <header>
-  <nav style="background-color: #333; padding: 15px;">
-    <a href="index.html" style="color: white; margin-right: 20px; text-decoration: none;">Inicio</a>
+   <nav style="background-color: #333; padding: 15px;">
     <a href="Usuarios.html" style="color: white; margin-right: 20px;">Crear Usuario</a>
     <a href="transaccion.html" style="color: white; margin-right: 20px;">Crear Transacción</a>
+    <a href="index.html" style="color: white; margin-right: 20px; text-decoration: none;">Inicio</a>
     <a href="transacciones.html" style="color: white; margin-right: 20px;">Historial</a>
     <a href="wallet.html" style="color: white; margin-right: 20px;">Estado de Cartera</a>
   </nav>
@@ -31,6 +27,6 @@
 
   <div id="respuesta"></div>
 
-  <script src="usuario.js"></script>
+  <script src="../scripts.js/usuario.js"></script>
 </body>
 </html>
