--- a/Front/Front/wallet.html
+++ b/Front/Front/wallet.html
@@ -3,22 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Estado de Cartera</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; max-width: 800px; margin: auto; }
-    select, button { padding: 10px; margin-bottom: 12px; width: 100%; }
-    table { width: 100%; border-collapse: collapse; margin-top: 20px; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: left; }
-    th { background-color: #f0f0f0; }
-    #mensaje { font-weight: bold; margin-top: 10px; }
-  </style>
+ <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
 
     <header>
-  <nav style="background-color: #333; padding: 15px;">
-    <a href="index.html" style="color: white; margin-right: 20px; text-decoration: none;">Inicio</a>
+ <nav style="background-color: #333; padding: 15px;">
     <a href="Usuarios.html" style="color: white; margin-right: 20px;">Crear Usuario</a>
     <a href="transaccion.html" style="color: white; margin-right: 20px;">Crear Transacción</a>
+    <a href="index.html" style="color: white; margin-right: 20px; text-decoration: none;">Inicio</a>
     <a href="transacciones.html" style="color: white; margin-right: 20px;">Historial</a>
     <a href="wallet.html" style="color: white; margin-right: 20px;">Estado de Cartera</a>
   </nav>
@@ -49,7 +42,7 @@
     <h4>Total en ARS (incluyendo saldo): $<span id="totalArs"></span></h4>
   </div>
 
-  <script src="wallet.js"></script>
+  <script src="../scripts.js/wallet.js"></script>
 
 </body>
 </html>
