--- a/Front/Front/Index.html
+++ b/Front/Front/Index.html
@@ -7,20 +7,44 @@
 </head>
 <body>
 
-  <header>
-  <nav style="background-color: #333; padding: 15px;">
-    <a href="Usuarios.html" style="color: white; margin-right: 20px;">Crear Usuario</a>
-    <a href="transaccion.html" style="color: white; margin-right: 20px;">Crear Transacción</a>
-    <a href="index.html" style="color: white; margin-right: 20px; text-decoration: none;">Inicio</a>
-    <a href="transacciones.html" style="color: white; margin-right: 20px;">Historial</a>
-    <a href="wallet.html" style="color: white; margin-right: 20px;">Estado de Cartera</a>
-  </nav>
+ <header>
+  
 </header>
 
-  <main> 
-    <h1>Bienvenido a la App de Criptomonedas </h1>
-    <p>Desde aquí podés gestionar usuarios, transacciones y ver el estado de tu cartera.</p>
-    <p>Usá la barra de navegación para acceder a cada sección.</p>
+    <main>
+    <div class="hero">
+      <h1>Bienvenido a CriptoManager 💸</h1>
+      <p>Gestioná usuarios, comprá y vendé criptomonedas y visualizá tu cartera en tiempo real.</p>
+      <a href="transaccion.html">
+        <button>Iniciar ahora</button>
+      </a>
+    </div>
+
+    <section class="acciones">
+      <div class="card">
+        <h3>Crear Usuario</h3>
+        <p>Registrá nuevos usuarios para operar con cripto.</p>
+        <a href="Usuarios.html">Ir a Usuarios</a>
+      </div>
+
+      <div class="card">
+        <h3>Crear Transacción</h3>
+        <p>Compra o vendé cripto al mejor precio del exchange seleccionado.</p>
+        <a href="transaccion.html">Ir a Transacciones</a>
+      </div>
+
+      <div class="card">
+        <h3>Estado de Cartera</h3>
+        <p>Visualizá tus criptos y su valor actual en ARS.</p>
+        <a href="wallet.html">Ir a Wallet</a>
+      </div>
+
+      <div class="card">
+        <h3>Historial</h3>
+        <p>Consultá todas las operaciones realizadas por los usuarios.</p>
+        <a href="transacciones.html">Ver Historial</a>
+      </div>
+    </section>
   </main>
 
 
