--- a/Front/Front/Usuarios.html
+++ b/Front/Front/Usuarios.html
@@ -4,28 +4,41 @@
   <meta charset="UTF-8" />
   <title>Crear Usuario</title>
  <link rel="stylesheet" href="../css/styles.css" />
+ <link rel="stylesheet" href="../css/usuario.css">
 </head>
 <body>
-   <header>
-   <nav style="background-color: #333; padding: 15px;">
-    <a href="Usuarios.html" style="color: white; margin-right: 20px;">Crear Usuario</a>
-    <a href="transaccion.html" style="color: white; margin-right: 20px;">Crear Transacción</a>
-    <a href="index.html" style="color: white; margin-right: 20px; text-decoration: none;">Inicio</a>
-    <a href="transacciones.html" style="color: white; margin-right: 20px;">Historial</a>
-    <a href="wallet.html" style="color: white; margin-right: 20px;">Estado de Cartera</a>
+<header>
+  <nav class="navbar">
+    <a href="index.html">Inicio</a>
+    <a href="Usuarios.html">Crear Usuario</a>
+    <a href="transaccion.html">Crear Transacción</a>
+    <a href="transacciones.html">Historial</a>
+    <a href="wallet.html">Estado de Cartera</a>
   </nav>
 </header>
 
-  <h2>Crear nuevo usuario</h2>
+  
+ <div class="contenedor-formulario">
+  <h2>Crear Nuevo Usuario</h2>
   <form id="formUsuario">
-    <input type="text" id="nombre" placeholder="Nombre" required />
-    <input type="email" id="email" placeholder="Email" required />
-    <input type="password" id="password" placeholder="Contraseña" required />
-    <input type="number" id="saldo" placeholder="Saldo ARS inicial" required />
+    <label for="nombre">Nombre</label>
+    <input type="text" id="nombre" required>
+
+    <label for="email">Email</label>
+    <input type="email" id="email" required>
+
+    <label for="password">Contraseña</label>
+    <input type="password" id="password" required>
+
+    <label for="saldo">Saldo ARS</label>
+    <input type="number" id="saldo" required>
+
     <button type="submit">Crear Usuario</button>
   </form>
 
   <div id="respuesta"></div>
+</div>
+
 
   <script src="../scripts.js/usuario.js"></script>
 </body>
