--- a/Front/Front/wallet.html
+++ b/Front/Front/wallet.html
@@ -4,16 +4,17 @@
   <meta charset="UTF-8">
   <title>Estado de Cartera</title>
  <link rel="stylesheet" href="../css/styles.css">
+   <link rel="stylesheet" href="../css/wallet.css">
 </head>
 <body>
 
-    <header>
- <nav style="background-color: #333; padding: 15px;">
-    <a href="Usuarios.html" style="color: white; margin-right: 20px;">Crear Usuario</a>
-    <a href="transaccion.html" style="color: white; margin-right: 20px;">Crear Transacción</a>
-    <a href="index.html" style="color: white; margin-right: 20px; text-decoration: none;">Inicio</a>
-    <a href="transacciones.html" style="color: white; margin-right: 20px;">Historial</a>
-    <a href="wallet.html" style="color: white; margin-right: 20px;">Estado de Cartera</a>
+  <header>
+  <nav class="navbar">
+    <a href="index.html">Inicio</a>
+    <a href="Usuarios.html">Crear Usuario</a>
+    <a href="transaccion.html">Crear Transacción</a>
+    <a href="transacciones.html">Historial</a>
+    <a href="wallet.html">Estado de Cartera</a>
   </nav>
 </header>
 
